--- a/api_auto/login_yaml.yaml
+++ b/api_auto/login_yaml.yaml
@@ -1,7 +1,7 @@
 ---
 #用连续三个连字号(---)区分多个文件
 #登录成功
-url: http://192.168.31.44:8080/cms/manage/loginJump.do
+url: http://kiros.love/cms/manage/loginJump.do
 header: {
   Content-Type: application/x-www-form-urlencoded
 }
@@ -17,7 +17,7 @@ response: {
 
 ---
 #用户名参数为空
-url: http://192.168.31.44:8080/cms/manage/loginJump.do
+url: http://kiros.love/cms/manage/loginJump.do
 header: {
   Content-Type: application/x-www-form-urlencoded
 }
@@ -33,7 +33,7 @@ response: {
 
 ---
 #密码名为空
-url: http://192.168.31.44:8080/cms/manage/loginJump.do
+url: http://kiros.love/cms/manage/loginJump.do
 header: {
   Content-Type: application/x-www-form-urlencoded
 }
@@ -49,7 +49,7 @@ response: {
 
 ---
 #用户名为null
-url: http://192.168.31.44:8080/cms/manage/loginJump.do
+url: http://kiros.love/cms/manage/loginJump.do
 header: {
   Content-Type: application/x-www-form-urlencoded
 }
@@ -65,7 +65,7 @@ response: {
 
 ---
 #密码为null
-url: http://192.168.31.44:8080/cms/manage/loginJump.do
+url: http://kiros.love/cms/manage/loginJump.do
 header: {
   Content-Type: application/x-www-form-urlencoded
 }
