--- a/api_auto_frame/data/login_mysql_data.yaml
+++ b/api_auto_frame/data/login_mysql_data.yaml
@@ -1,5 +1,5 @@
-host: 192.168.31.44
+host: 121.40.198.139
 user: root
-password: '123456'
-db: test_cms
+password: 'YSQysq@1995'
+db: cms
 port: 3306
